# corporative_agent

./: README.md  example.env  pyproject.toml  requirements.txt  teste.py
src/corporative_agent/: crew.py  main.py
src/corporative_agent/config/: agents.yaml  tasks.yaml
