[project]
name = "corporative_agent"
version = "0.1.0"
description = "corporative_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
corporative_agent = "corporative_agent.main:run"
run_crew = "corporative_agent.main:run"
train = "corporative_agent.main:train"
replay = "corporative_agent.main:replay"
test = "corporative_agent.main:test"
run_with_trigger = "corporative_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
